Archive2/7d/8ac66279e2a4df/output
main.cpp: In function 'int main()':
main.cpp:12:12: error: call of overloaded 'cm(const char [8])' is ambiguous
     cm(ccar);
            ^
main.cpp:12:12: note: candidates are:
main.cpp:4:6: note: void cm(const char (&)[8])
 void cm(const char (&h)[8]) 
      ^
main.cpp:6:6: note: void cm(const char*)
 void cm(const char * h)
      ^
